fix: board is overflowed to the right side with a long status list (#138)

--- a/packages/ui-app/app/[orgID]/project/[projectId]/board/style.css
+++ b/packages/ui-app/app/[orgID]/project/[projectId]/board/style.css
@@ -17,7 +17,7 @@
 }
 
 .board-header {
-  @apply px-3 py-2 sticky top-[41px] left-0 w-full;
+  @apply px-3 py-2 sticky top-0 left-0 w-full;
   @apply bg-white/30 dark:bg-gray-900/30;
   @apply border-b dark:border-gray-700;
 }
@@ -30,8 +30,7 @@
   /* @apply space-y-3 h-full; */
   @apply overflow-x-hidden overflow-y-auto;
   @apply pb-8 pt-3;
-  height: calc(100vh - 163px);
-  
+  height: calc(100vh - 168px);
 }
 
 .board-item-container {
