--- a/packages/ui-app/app/global.css
+++ b/packages/ui-app/app/global.css
@@ -47,6 +47,7 @@
 
 .custom-scrollbar::-webkit-scrollbar {
   width: 6px;
+  height: 8px;
 }
 
 /* Track */
